@@ -6,8 +6,11 @@ import java.lang.reflect.InvocationTargetException;
 import java.lang.reflect.Modifier;
 import java.net.URL;
 import java.net.URLClassLoader;
+import java.net.URLDecoder;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.*;
 import java.util.stream.Stream;
 
@@ -17,6 +20,7 @@ ClassLoader - что это такое?
 //TODO изменить Path на File
 public class Solution {
     public static void main(String[] args) throws ClassNotFoundException {
+//        System.out.println(Solution.class.getProtectionDomain().getCodeSource().getLocation().getPath() + Solution.class.getPackage().getName().replaceAll("[.]", "/") + "/data");
         Set<? extends Animal> allAnimals = getAllAnimals(Solution.class.getProtectionDomain().getCodeSource().getLocation().getPath() + Solution.class.getPackage().getName().replaceAll("[.]", "/") + "/data");
         System.out.println(allAnimals);
 
@@ -25,22 +29,29 @@ public class Solution {
     public static Set<? extends Animal> getAllAnimals(String pathToAnimals) {
         Set<Animal> animals = new HashSet<>();
         PathClassLoader loader = new PathClassLoader();
+
+//        if (pathToAnimals.startsWith("/"))
+//            pathToAnimals = pathToAnimals.substring(1);
+        File[] files = null;
         try {
-            for (String path : getPathClassesList(pathToAnimals)) {
-                Class<?> clazz = loader.loadClass(path);
-                try {
-                    Constructor<?>[] constructors = clazz.getDeclaredConstructors();
-                    for (Constructor<?> constructor : constructors) {
-                        if (constructor.getModifiers() == Modifier.PRIVATE) {
-                            constructor.setAccessible(true);
+            files = new File(URLDecoder.decode(pathToAnimals, "UTF-8")).listFiles(File::isFile);
+        } catch (UnsupportedEncodingException e) {
+            throw new RuntimeException(e);
+        }
+        try {
+            for (File file : files) {
+                Class<?> clazz = loader.findClass(file.getAbsolutePath());
+                if (Animal.class.isAssignableFrom(clazz)) {
+                    try {
+                        Constructor<?>[] constructors = clazz.getDeclaredConstructors();
+                        for (Constructor<?> constructor : constructors) {
+                            if (constructor.getModifiers() == Modifier.PUBLIC && constructor.getParameterCount() == 0) {
+                                animals.add((Animal) constructor.newInstance());
+                            }
                         }
-                        if (constructor.getParameterCount() == 0) {
-                            animals.add((Animal) constructor.newInstance());
-                        }
+                    } catch (InvocationTargetException | IllegalAccessException e) {
+                        throw new RuntimeException(e);
                     }
-                } catch (ClassCastException | IllegalAccessException ignore) {
-                } catch (InvocationTargetException e) {
-                    throw new RuntimeException(e);
                 }
             }
         } catch (ClassNotFoundException | InstantiationException e) {
@@ -51,28 +62,15 @@ public class Solution {
 
 
 
-    private static List<String> getPathClassesList(String filePath) {
-        if (filePath.startsWith("/"))
-            filePath = filePath.substring(1);
-
-        String packagePath = normalizePackagePath(filePath);
-        try (var pathStream = Files.walk(Path.of(filePath))){
-            return pathStream
-                    .filter(Files::isRegularFile)
-                    .map(path -> packagePath + "." + path.getFileName().toString())
-                    .map(s -> s = s.substring(0, s.lastIndexOf(".")))
-                    .toList();
-        } catch (IOException e) {
-            e.printStackTrace();
-        }
-        throw new IllegalArgumentException("Path not found: " + filePath);
-    }
-
-    private static String normalizePackagePath(String path) {
-        String lastPack = path.substring(path.lastIndexOf("/") + 1);
-        String pack = Solution.class.getPackage().getName();
-        return pack + "." + lastPack;
-    }
+//    private static File[] getPathClassesList(String filePath) {
+//        if (filePath.startsWith("/"))
+//            filePath = filePath.substring(1);
+//        try {
+//            return new File(URLDecoder.decode(filePath, "UTF-8")).listFiles(File::isFile);
+//        } catch (UnsupportedEncodingException e) {
+//            throw new RuntimeException(e);
+//        }
+//    }
 
 
 
@@ -82,13 +80,13 @@ public class Solution {
         protected Class<?> findClass(String name) throws ClassNotFoundException {
             byte[] bytes = null;
             try {
-                bytes = Files.readAllBytes(Path.of(name));
+                bytes = Files.readAllBytes(Paths.get(name));
             } catch (IOException e) {
                 e.printStackTrace();
             }
             if (bytes == null)
                 throw new ClassNotFoundException("Not found class: " + name);
-            return defineClass(name, bytes, 0, bytes.length);
+            return defineClass(null, bytes, 0, bytes.length);
         }
     }
 }
